--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
   },
